src/test/deca/context/invalid/provided/method_call_on_unrelated_class_error.deca
// Description:
//    Une méthode est appelée sur un objet qui ne définit pas cette méthode.
//
// Résultats:
//    method_call_on_unrelated_class_error.deca:18:12: Method calculate is not defined in class A
//
// Historique:
//    créé le 19/01/2025
class A {
    void display() {
        print("Affichage.");
    }
}

class B {
    void test() {
        A obj = new A();
        obj.calculate(); 
    }
}
